<resources>
    <string name="app_name">MusicPlayer_android</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">My Favorite</string>
    <string name="title_activity_lyrics">LyricsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_text">Search song, artist, album or playlist</string>
    <string name="greeting">Hello, <b>David</b></string>
    <string name="greeting2">Ready to dive into the world of music?</string>
    <string name="recommendations">Recommendations</string>
    <string name="recent_listen">Your Recent Listening</string>
    <string name="top_album">Top Albums</string>
    <string name="recommendation_album1">Night Vocals</string>
    <string name="recommendation_album2">Dance All Night</string>
    <string name="recommendation_detail">30 Songs . 1 hour 0 min</string>
    <string name="recent_listening_detail">Redbone</string>
    <string name="recent_listening_time">6:15</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="album_detail">Donald McKinley Jr. (born September 25, 1983), also know by the stage name Childish Gambino, is an Ame...</string>
    <string name="album_name"><b>Childish Gambino</b></string>
    <string name="popular_tracks"><b>Popular Tracks</b></string>
    <string name="library"><b>My Library</b></string>
    <string name="favorite_track">\u0020\u0020\u0020Favorite Tracks</string>
    <string name="playlists">Playlists</string>
    <string name="albums"><b>Albums</b></string>
</resources>