<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/albumCover"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:background="@drawable/albumcover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imgbtnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:scaleType="centerCrop"
        android:background="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="@id/albumCover"
        app:layout_constraintLeft_toLeftOf="@id/albumCover"
        />

    <TextView
        android:id="@+id/albumDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/album_detail"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/albumCover"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:text="@string/album_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/albumDetail"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listBestAlbum"
        android:layout_width="380dp"
        android:layout_height="@dimen/_170sdp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/albumCover" />

    <TextView
        android:id="@+id/txtPopularTrack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/popular_tracks"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listBestAlbum" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listPopularTrack"
        android:layout_width="370dp"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginLeft="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPopularTrack"
        android:layout_marginBottom="@dimen/_50sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>